--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -21,9 +21,15 @@ body {
 
 p {
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 h1 {
   font-size: 96px;
+  line-height: 1.5;
+}
+h2 {
+  font-size: 64px;
 }
 
 .hero {
@@ -50,4 +56,32 @@ h1 {
   font-size: 18px;
   line-height: 27px;
   padding: 15px 30px;
+}
+.btn-branding-outline {
+  color: var(--branding-color);
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+.newborn-description {
+  padding: 120px 60px;
+}
+
+@media (max-width: 960px) {
+  h1 {
+    font-size: 42px;
+    line-height: 2;
+  }
+  h2 {
+    font-size: 42px;
+  }
+  .hero {
+    padding: 80px 20px;
+  }
+  .newborn-description {
+    padding: 0;
+    text-align: center;
+  }
 }
