--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -72,6 +72,21 @@ h2 {
 .about-section-content {
   margin: 30px;
 }
+.newborn-container {
+  padding: 160px 20px;
+}
+.newborn-container h1 {
+  font-size: 64px;
+  line-height: 84px;
+}
+.newborn-container h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+.newborn {
+  margin: 30px;
+}
+
 .btn-branding {
   background: var(--branding-color);
   color: white;
@@ -88,6 +103,7 @@ h2 {
   line-height: 27px;
   padding: 15px 30px;
 }
+
 .newborn-description {
   padding: 120px 60px;
 }
