--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -72,19 +72,20 @@ h2 {
 .about-section-content {
   margin: 30px;
 }
-.newborn-container {
+.one-two-container {
   padding: 160px 20px;
   margin-top: -100px;
 }
-.newborn-container h1 {
+
+.one-two-container h1 {
   font-size: 64px;
   line-height: 84px;
 }
-.newborn-container h2 {
+.one-two-container h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
-.newborn {
+.one-two {
   margin: 30px;
 }
 
