--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -88,6 +88,22 @@ h2 {
 .one-two {
   margin: 30px;
 }
+.three-four-container {
+  padding: 160px 20px;
+  margin-top: -100px;
+}
+
+.three-four-container h1 {
+  font-size: 64px;
+  line-height: 84px;
+}
+.three-four-container h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+.three-four {
+  margin: 30px;
+}
 
 .btn-branding {
   background: var(--branding-color);
