--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -104,7 +104,22 @@ h2 {
 .three-four {
   margin: 30px;
 }
+.contact-container {
+  padding: 160px 20px;
+  margin-top: -100px;
+}
 
+.contact-container h1 {
+  font-size: 64px;
+  line-height: 84px;
+}
+.contact-container h2 {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
+.contact {
+  margin: 30px;
+}
 .btn-branding {
   background: var(--branding-color);
   color: white;
