--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -117,6 +117,12 @@ h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
+.contact-container h3 {
+  font-size: 24px;
+  line-height: 1.5;
+
+  font-family: var(--default-font-family);
+}
 .contact {
   margin: 30px;
 }
