--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -55,6 +55,7 @@ nav a:hover,
 nav li.active a {
   color: var(--branding-color);
 }
+
 .text {
   margin-top: 80px;
 }
@@ -69,7 +70,8 @@ nav li.active a {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
-.hero {
+.hero,
+.contact h1 {
   background-color: var(--secondary-color);
   text-align: center;
   padding: 160px 20px;
@@ -134,7 +136,7 @@ nav li.active a {
 }
 .contact-container {
   padding: 160px 20px;
-  margin-top: -100px;
+  margin-top: -160px;
 }
 
 .contact-container h1 {
@@ -151,9 +153,7 @@ nav li.active a {
 
   font-family: var(--default-font-family);
 }
-.contact {
-  margin: 30px;
-}
+
 .btn-branding {
   background: var(--branding-color);
   color: white;
@@ -176,7 +176,7 @@ nav li.active a {
 }
 
 .logo {
-  max-width: 150px;
+  max-height: 40px;
 }
 
 @media (max-width: 960px) {
