--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -56,6 +56,35 @@ nav li.active a {
   color: var(--branding-color);
 }
 
+footer {
+  margin: 60px 0;
+}
+
+footer .email-link {
+  text-decoration: none;
+  color: black;
+  font-size: 24px;
+}
+
+footer .email-link:hover {
+  color: var(--branding-color);
+}
+
+footer .social-links a {
+  margin: 0 20px;
+  color: var(--branding-color);
+  background: var(--secondary-color);
+  padding: 10px 15px;
+  font-size: 18px;
+  border-radius: 50%;
+  transition: all 100ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: white;
+  background: var(--branding-color);
+}
+
 .text {
   margin-top: 80px;
 }
@@ -154,6 +183,12 @@ nav li.active a {
   font-family: var(--default-font-family);
 }
 
+.homepage-button {
+  display: block;
+  text-align: center;
+  margin-top: 30px;
+}
+
 .btn-branding {
   background: var(--branding-color);
   color: white;
@@ -162,6 +197,12 @@ nav li.active a {
   line-height: 27px;
   padding: 15px 30px;
 }
+
+.btn-branding:hover {
+  color: var(--branding-color);
+  border: solid var(--branding-color);
+}
+
 .btn-branding-outline {
   color: var(--branding-color);
   border: 1px solid var(--branding-color);
