added responsive to the images in the html

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -254,4 +254,9 @@ footer .social-links a:hover {
     text-align: center;
     padding: 0;
   }
+  .newborn-container img,
+  .one-two-container img,
+  .three-four-container img {
+    margin: 0;
+  }
 }
