--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -179,7 +179,7 @@ footer .social-links a:hover {
   margin: 30px;
 }
 .contact-container {
-  padding: 160px 20px;
+  padding: 160px 0;
   margin: -160px 0;
 }
 
