--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -88,12 +88,6 @@ footer .social-links a:hover {
 .text {
   margin-top: 80px;
 }
-.text-2 {
-  margin-top: -80px;
-}
-.text-3 {
-  margin-top: -80px;
-}
 
 .container {
   font-size: 18px;
@@ -117,7 +111,7 @@ footer .social-links a:hover {
   font-size: 24px;
 }
 .about-section {
-  padding: 160px 20px;
+  padding: 60px 20px;
 }
 .about-section h1 {
   font-size: 64px;
@@ -181,6 +175,15 @@ footer .social-links a:hover {
 .contact-container {
   padding: 160px 0;
   margin: -160px 0;
+}
+
+.contact-container a {
+  text-decoration: none;
+  color: black;
+}
+
+.contact-container a:hover {
+  color: var(--branding-color);
 }
 
 .contact-container h1 {
